# airflow

./: pyproject.toml
providers/src/airflow/providers/openlineage/transport/: variable.py
providers/src/airflow/providers/openlineage/utils/: operator.py
providers/tests/system/openlineage/: event.json  example_openlineage.py
task_sdk/: pyproject.toml
task_sdk/src/airflow/sdk/: log.py
task_sdk/src/airflow/sdk/api/: client.py
task_sdk/src/airflow/sdk/api/datamodels/: _generated.py  dagrun.py  ti.py
task_sdk/src/airflow/sdk/execution_time/: comms.py  supervisor.py  task_runner.py
task_sdk/tests/: conftest.py
task_sdk/tests/execution_time/: test_supervisor.py  test_task_runner.py
