# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "apache-airflow-task-sdk"
version = "0.1.0.dev0"
description = "Python Task SDK for Apache Airflow DAG Authors"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9, <3.13"
dependencies = [
    "attrs>=24.2.0",
    "google-re2>=1.1.20240702",
    "methodtools>=0.4.7",
    "msgspec>=0.18.6",
    "psutil>=6.1.0",
    "structlog>=24.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airflow"]

[tool.ruff]
extend = "../pyproject.toml"
src = ["src"]
namespace-packages = ["src/airflow"]

[tool.ruff.lint.per-file-ignores]

# Ignore Doc rules et al for anything outside of tests
"!src/*" = ["D", "TID253", "S101", "TRY002"]


"src/airflow/sdk/__init__.py" = ["TCH004"]
# This is not part of the public API, so disable some of the doc requirements
"src/airflow/sdk/execution_time/*" = ["D101"]

# Generated file, be less strict
"src/airflow/sdk/*/_generated.py" = ["D"]

[tool.uv]
dev-dependencies = [
    "kgb>=7.1.1",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
]

[tool.uv.sources]
# Need a version with https://github.com/koxudaxi/datamodel-code-generator/pull/2124 in it, not yet released
datamodel-code-generator = { git = "https://github.com/koxudaxi/datamodel-code-generator.git", rev = "cb0462ae84700865a42df45a0e91a1693c199891" }

[tool.coverage.run]
branch = true
relative_files = true
source = ["src/airflow"]
include_namespace_packages = true

[tool.coverage.report]
skip_empty = true
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "@(typing(_extensions)?\\.)?overload",
    "if (typing(_extensions)?\\.)?TYPE_CHECKING:",
]

[dependency-groups]
codegen = [
    "datamodel-code-generator[http]",
]

[tool.black]
# This is needed for datamodel-codegen to treat this as the "project" file

# To use:
#
#   uv run --group codegen --project apache-airflow-task-sdk --directory task_sdk datamodel-codegen
[tool.datamodel-codegen]
capitalise-enum-members=true # `State.RUNNING` not `State.running`
disable-timestamp=true
enable-version-header=true
enum-field-as-literal='one' # When a single enum member, make it output a `Literal["..."]`
input-file-type='openapi'
output-model-type='msgspec.Struct'
output-datetime-class='datetime'
target-python-version='3.9'
use-default=true
use-double-quotes=true
use-schema-description=true  # Desc becomes class doc comment
use-standard-collections=true # list[] not List[]
use-subclass-enum=true # enum, not union of Literals
use-union-operator=true # 3.9+annotations, not `Union[]`

url = 'http://0.0.0.0:9091/execution/openapi.json'
output = 'src/airflow/sdk/api/datamodels/_generated.py'
